--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@types/uuid": "^9.0.2",
+    "@types/ws": "^8.5.5",
     "nodemon": "^2.0.16"
   },
   "dependencies": {
     "@nut-tree/nut-js": "^2.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
+    "uuid": "^9.0.0",
     "ws": "^8.13.0"
   }
 }
