--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "ws_task",
   "version": "1.0.0",
   "description": "Template for the WebSocket remote control task",
-  "main": "index.js",
-  "type": "commonjs",
+  "main": "index.ts",
   "scripts": {
-    "start": "node ./index.js",
-    "start:dev": "nodemon ./index.ts",
+    "start": "ts-node ./index.js",
+    "start:dev": "cross-env npx nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Karyna Bertash",
