--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Template for the WebSocket remote control task",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node ./index.js",
+    "start": "ts-node ./index.ts",
     "start:dev": "cross-env npx nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "@nut-tree/nut-js": "^2.3.0",
+    "cross-env": "^7.0.3",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6",
     "uuid": "^9.0.0",
     "ws": "^8.13.0"
